crates/pcb/tests/snapshots/build__alias_unstable_ref_warning.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---
Warning: 'mycomps' uses unstable reference 'main'. The alias defined in '<TEMP_DIR>/pcb.toml' points to an unstable reference. Use a pinned version (inline :tag or pcb.toml).
   ╭─[ <TEMP_DIR>/board.zen:2:25 ]
 2 │SimpleResistor = Module("@mycomps/SimpleResistor.zen")
   │                                      ╰─────────────── 'mycomps' uses unstable reference 'main'. The alias defined in '<TEMP_DIR>/pcb.toml' points to an unstable reference. Use a pinned version (inline :tag or pcb.toml).
--- STDERR ---

✓ board.zen (1 components)
