crates/pcb/tests/snapshots/build__cross_repo_unstable_warning.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: '@github/thirdparty/tools:main' is an unstable reference. Use a pinned version.
   ╭─[ <TEMP_DIR>/cache/github/mycompany/components/v1.0.0/StableComponent.zen:3:18 ]
 3 │ThirdPartyTool = Module("@github/thirdparty/tools:main/Tool.zen")
   │                                         ╰──────────────────────── '@github/thirdparty/tools:main' is an unstable reference. Use a pinned version.
   ├─[ <TEMP_DIR>/board.zen:3:19 ]
 3 │StableComponent = Module("@github/mycompany/components:v1.0.0/StableComponent.zen")
   │                                                  ╰───────────────────────────────── Warning from `@github/mycompany/components:v1.0.0/StableComponent.zen`

✓ board.zen (1 components)
