crates/pcb/tests/snapshots/build__default_alias_unstable_ref_warning.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (1 components)
