crates/pcb/tests/snapshots/build__inline_manifest_unnamed_net_warning.snap
---
source: crates/pcb/tests/build.rs
assertion_line: 461
expression: output
---
Command: pcb build standalone.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Net had no explicit name; assigned 'N<AUTO>'
    ╭─[ <TEMP_DIR>/standalone.zen:16:11 ]
 16 │unnamed = Net()
    │            ╰─── Net had no explicit name; assigned 'N<AUTO>'

✓ standalone.zen (2 components)
