crates/pcb/tests/snapshots/build__inline_suppress_case_insensitive.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 2 warnings
✓ test.zen (0 components)
