crates/pcb/tests/snapshots/build__inline_suppress_combined_with_cli.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build test.zen -S electrical
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Not suppressed
   ╭─[ <TEMP_DIR>/test.zen:4:1 ]
 4 │warn("Not suppressed", kind="layout.spacing")
   │                      ╰─────────────────────── Not suppressed

Suppressed 2 warnings
✓ test.zen (0 components)
