crates/pcb/tests/snapshots/build__invalid_inherited_symbol_datasheet_is_warning.snap
---
source: crates/pcb/tests/build.rs
assertion_line: 241
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Failed to resolve symbol datasheet path 'missing-datasheet.pdf' relative to '<TEMP_DIR>/components/TestPart/Part.kicad_sym': File not found: <TEMP_DIR>/components/TestPart/missing-datasheet.pdf; dropping inherited datasheet field
1 similar warning(s) were suppressed
   ╭─[ <TEMP_DIR>/components/TestPart/Part.zen:5:1 ]
 5 │╭▶Component(
   ┆┆ 
 9 │├▶)
   │╰──── Failed to resolve symbol datasheet path 'missing-datasheet.pdf' relative to '<TEMP_DIR>/components/TestPart/Part.kicad_sym': File not found: <TEMP_DIR>/components/TestPart/missing-datasheet.pdf; dropping inherited datasheet field
   ├─[ <TEMP_DIR>/board.zen:2:8 ]
 2 │Part = Module("components/TestPart/Part.zen")
   │                          ╰─────────────────── Warning from `components/TestPart/Part.zen`

✓ board.zen (1 components)
